# dossier

./: .env.example  .gitignore  README.md  config.py  current_progress.md  dashboard.py  frontend-todo.txt  pyproject.toml  run_dossier.py
.streamlit/: config.toml
agents/: company_intel.py  gap_analysis.py  job_discovery.py  market_intel_agent.py  persona_builder.py  referral_finder.py  resume_agent.py  watchlist_agent.py
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/scripts/: seed_existing_users.py  seed_users.example.json
backend/src/dossier_api/: __init__.py  db.py  deps.py  main.py  settings.py
backend/src/dossier_api/models/: account.py  persona.py
backend/src/dossier_api/routers/: health.py  me.py  persona.py  pipeline.py  webhooks.py
backend/src/dossier_api/services/: __init__.py  persona_service.py
backend/src/dossier_api/workers/: pipeline_worker.py
backend/tests/: conftest.py  test_db.py  test_health.py  test_me.py  test_persona.py  test_persona_worker.py  test_webhooks.py  test_worker.py
core/: db.py  file_vault.py  linkedin_scraper.py  llm_client.py  logger.py  utils.py
docs/superpowers/milestones/: M0.md  M1.md  M10.md  M11.md  M2.md  M3.md  M4.md  M5.md  M6.md  M7.md  M8.md  M9.md
docs/superpowers/plans/: 2026-05-18-m2-backend-skeleton.md  2026-05-19-m3-persona-wizard.md
docs/superpowers/specs/: 2026-05-11-multi-user-ashby-design.md  2026-05-18-dossier-saas-frontend-design.md
frontend/: README.md  middleware.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/onboarding/: page.tsx
frontend/app/(app)/pending/: page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
frontend/app/(auth)/sign-up/[[...sign-up]]/: page.tsx
frontend/app/(marketing)/: layout.tsx  page.tsx
frontend/app/(marketing)/pricing/: page.tsx
frontend/components/brand/: Lockup.tsx  Mark.tsx  Wordmark.tsx
frontend/components/dossier/: CreditPill.tsx  MarketingFooter.tsx  MarketingNav.tsx  Sidebar.tsx
frontend/components/dossier/wizard/: QuizStep.tsx  ReviewStep.tsx  Stepper.tsx  SynthesisProgress.tsx  TargetsStep.tsx  UploadStep.tsx
frontend/components/marketing/: AgentsGrid.tsx  FinalCta.tsx  HeroSection.tsx  HowItWorks.tsx  JobCardPreview.tsx  PricingTeaser.tsx  TerminalLog.tsx
frontend/components/motion/: CountUp.tsx  Reveal.tsx
frontend/lib/: api.ts  persona-schema.ts  server-api.ts  theme.ts
frontend/lib/api/: persona.ts
frontend/tests/: Mark.test.tsx  theme.test.ts
learnings/: ranking_strategies.md
profile/: auth.json  exception_companies.json  target_companies.json
prompts/: cold_message_system.txt  resume_critique_system.txt  resume_revise_system.txt  resume_tailor_system.txt  skill_extract_system.txt
scripts/: export_questionnaire.py  run_company_intel.py  run_gap_analysis.py  run_job_discovery.py  run_market_intel.py  run_persona_builder.py  run_referral_finder.py  run_resume_agent.py  run_watchlist.py  set_password.py
sdk/: README.md  pyproject.toml
sdk/dossier_sdk/: __init__.py  config.py  orchestrator.py
sdk/dossier_sdk/agents/: __init__.py  company_intel.py  gap_analysis.py  job_discovery.py  market_intel_agent.py  persona_builder.py  referral_finder.py  resume_agent.py  watchlist_agent.py
sdk/dossier_sdk/core/: __init__.py  db.py  file_vault.py  intel_cache.py  linkedin_scraper.py  llm_client.py  logger.py  utils.py
sdk/dossier_sdk/prompts/: cover_letter_system.txt
sdk/src/dossier_sdk/: __init__.py
sdk/tests/: test_ashby_fetch.py  test_config_multiuser.py  test_job_discovery.py  test_llm_client.py  test_orchestrator.py  test_package_imports.py
sdk/tests-legacy/: test_ashby_fetch.py  test_config_multiuser.py  test_questionnaire_parser.py
tests/: test_ashby_fetch.py  test_config_multiuser.py  test_job_discovery.py  test_llm_client.py  test_questionnaire_parser.py
