[project]
name = "dossier"
version = "1.0.0"
description = "Autonomous agentic job search system — meta package wrapping dossier-sdk + Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Shivang Singh" }
]

# Root depends on the local SDK in editable mode. All agent/core/prompt
# deps come transitively through dossier-sdk. Only the Streamlit dashboard
# (kept until M4 per docs/superpowers/specs/2026-05-18-...md §12) and pandas
# (used by dashboard.py + a few agents) are direct here.
dependencies = [
    "dossier-sdk",
    "streamlit>=1.57.0",
    "pandas>=2.3.3",
]

[tool.uv.sources]
dossier-sdk = { path = "./sdk", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

# No [tool.hatch.build.*] section — root is not a buildable package, just
# a workspace pointer. All buildable code lives in sdk/ (and later backend/).

# No [tool.pytest.ini_options] at root — tests live in sdk/tests/ now and
# are configured by sdk/pyproject.toml. Run with:  cd sdk && uv run pytest
