[project]
name = "dossier-api"
version = "0.1.0"
description = "Dossier — FastAPI backend (auth, accounts, pipeline gating, SSE progress)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Shivang Singh" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "clerk-backend-api>=5.0.0",
    "svix>=1.34.0",
    "sse-starlette>=2.1.0",
    "fasteners>=0.19",
    "dossier-sdk",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.uv.sources]
dossier-sdk = { path = "../sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dossier_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
