[project]
name = "dossier-sdk"
version = "1.0.1"
description = "Dossier — agentic job search SDK (agents, scoring, persona, intel)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Shivang Singh" }
]

dependencies = [
    # --- LLM Providers ---
    "openai>=2.33.0",
    "anthropic>=0.97.0",
    # --- Config ---
    "python-dotenv>=1.2.2",
    # --- HTTP ---
    "httpx>=0.28.1",
    "requests>=2.33.1",
    # --- Database ---
    "aiosqlite>=0.22.1",
    # --- Google Integration ---
    "gspread>=6.2.1",
    "google-auth>=2.50.0",
    "google-auth-oauthlib>=1.3.1",
    # --- Telegram ---
    "python-telegram-bot>=22.7",
    # --- PDF Parsing ---
    "pymupdf>=1.27.2.3",
    # --- Terminal Output ---
    "rich>=15.0.0",
    # --- Job Search ---
    "python-jobspy>=1.1.82",
    # --- Data (used by some agent post-processing) ---
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dossier_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
